--- a/app/views/base/ckeditorView.html.erb
+++ b/app/views/base/ckeditorView.html.erb
@@ -1,7 +1,7 @@
 <%=javascript_include_tag Ckeditor.cdn_url %>
 <div class="container">
   <div class="row">
-        <%= form_for :users do |f|%>
+        <%= form_for :users ,:url => '/base/connectToMail',:method =>'post' do |f|%>
             <div class="col-sm-4">
                 <%= f.label :"to :" %>
                 <%= f.text_field :to ,size:50%><br><br>
@@ -13,4 +13,4 @@
                 </div>
         <%end%>
     </div>
-</div>
+</div>  
