--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -2,6 +2,10 @@
 body{
   overflow: hidden;
   }
+  span{
+    float: left;
+
+  }
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
       margin-bottom: 0;
