--- a/app/views/layouts/partials/base/_left_side_nav.html.erb
+++ b/app/views/layouts/partials/base/_left_side_nav.html.erb
@@ -3,10 +3,10 @@
     <%= link_to 'Gmail Login', 'auth/google_oauth2' %>
     </div>
     <div class="alert">
-    <%= link_to 'Compose', 'base/composeMail' %>
+    <%= link_to 'Compose', base_ckeditorView_path %>
     </div>
 
-    <div class="alert">asasdasdas
-    <%= link_to 'Sent Items', 'auth/google_oauth2' %>
+    <div class="alert">
+    <%= link_to 'Sent Items', base_displaySentMail_path %>
     </div>
 </div>
